--- a/.envrc
+++ b/.envrc
@@ -5,6 +5,6 @@ if [ -f .envrc.local ]; then
   source .envrc.local
 fi
 
-# BOOST NEU ENDPOINT
+# BOOST NEU/UI ENDPOINT
 export NEU=$"686bbc3e-08f7-46cf-95f8-7539e6fee972"
 export UI=$"39dd0982-d784-11e6-9cd4-22000a1e3b52"
