comitting changes to remove import errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ dev = [
 ]
 
 [project.scripts]
-globus-helper = "code.main:main"
+globus-helper = "globus_helper.main:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["code*"]
+include = ["globus_helper*"]
